--- a/styles.css
+++ b/styles.css
@@ -26,10 +26,24 @@ body {
     font-size: 16px;
     cursor: pointer;
     font-weight: 600;
-    border: 2px solid rgba(0,0,0,0.5);
+    border: 2px solid rgba(94, 70, 70, 0.5);
     border-radius: 4px;
 }
 
 .result {
     margin-top: 20px;
 }
+
+/* Footer Styles */
+footer {
+    background: transparent;
+    color: rgb(77, 58, 58);
+    padding: 10px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    }
